# acquire-zarr

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  MANIFEST.in  README.md  justfile  manylinux.Dockerfile  pyproject.toml  setup.py  vcpkg.json  win64.Dockerfile
.github/: manylinux-wheel.yml
.github/workflows/: benchmark.yml  build.yml  manylinux-wheel.yml  release-dry-run.yml  release.yml  test-debug.yml  test.yml
benchmarks/: benchmark.cpp  benchmark.py  plot_benchmarks.py  run_benchmarks.py
cmake/: macos-toolchain.cmake
examples/: CMakeLists.txt  leak-checker.c  raw-multiscale-filesystem.c  raw-s3.c  stream-compressed-multiscale-to-s3.c  stream-compressed-to-filesystem.c  stream-compressed-to-s3.c  stream-multiarray-to-filesystem.cpp  stream-raw-multiscale-to-filesystem.c  stream-raw-to-filesystem.c  stream-raw-to-s3.c  zarrv2-compressed-s3.c  zarrv2-raw-filesystem.c  zarrv2-raw-filesystem.py  zarrv3-compressed-filesystem.c  zarrv3-compressed-multiscale-filesystem.c  zarrv3-compressed-multiscale-s3.c  zarrv3-compressed-s3.c  zarrv3-raw-filesystem.c  zarrv3-raw-multiscale-filesystem.c  zarrv3-raw-multiscale-s3.c  zarrv3-raw-s3.c  zarrv3-raw-s3.py
examples/python/: zarrv2-compressed-s3.py  zarrv3-compressed-filesystem.py
include/: acquire.zarr.h  zarr.types.h
python/: CMakeLists.txt  acquire-zarr-py.cpp  acquire_zarr.pyi
python/acquire_zarr/: __init__.pyi
scripts/: build-wheel-linux.sh  generate-launch.py
shim/: README.md  shim_log.c
src/streaming/: CMakeLists.txt  acquire.zarr.cpp  array.base.cpp  array.base.hh  array.cpp  array.dimensions.cpp  array.dimensions.hh  array.hh  array.writer.cpp  array.writer.hh  chunk.cpp  chunk.hh  definitions.hh  downsampler.cpp  downsampler.hh  file.handle.cpp  file.handle.hh  file.sink.cpp  file.sink.hh  frame.queue.cpp  frame.queue.hh  fs.array.cpp  fs.array.hh  fs.multiscale.array.cpp  fs.multiscale.array.hh  fs.storage.cpp  fs.storage.hh  group.cpp  group.hh  locked.buffer.cpp  locked.buffer.hh  multiscale.array.cpp  multiscale.array.hh  node.cpp  node.hh  plate.cpp  plate.hh  platform.cpp  platform.hh  resource.pool.cpp  (+47 more)
src/streaming/posix/: file.sink.impl.cpp  platform.cpp
src/streaming/win32/: file.sink.impl.cpp  platform.cpp
tests/: CMakeLists.txt
(+103 files in other folders)
